# uni-resource-hub

./: .gitignore  DEVELOPMENT.md  README.md  package-lock.json  package.json  requirements.txt
.github/: copilot-instructions.md
api/: index.py  main.py
backend/: .env.example  check_enum.py  check_users.py  cors_update.py  debug_auth.py  debug_login.py  pyproject.toml  requirements.txt  reset_password.py  seed_data.py  test_db.py  test_db_connection.py  test_endpoints.py  test_file_upload.py  test_specific_login.py
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  bookmarks.py  categories.py  resources.py  tags.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  init_db.py  models.py
backend/app/schemas/: __init__.py
backend/app/services/: file_storage.py
frontend/: .env.production  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: BookmarksPage.tsx  CategoriesPage.tsx  DashboardPage.tsx  LoginPage.tsx  ProfilePage.tsx  ResourcesPage.tsx  SignupPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
